fix scrollbar height

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -125,7 +125,8 @@ h3 {
 }
 
 ::-webkit-scrollbar {
-  width: 8px;
+  height: 10px;
+  width: 10px;
 }
 
 ::-webkit-scrollbar-track {
